@@ -132,6 +132,9 @@ html_last_updated_fmt = '%%b %%d, %%Y'
 # If false, no module index is generated.
 #html_use_modindex = True
 
+# If false, no index is generated.
+#html_use_index = True
+
 # If true, the reST sources are included in the HTML build as _sources/<name>.
 #html_copy_source = True
 
